force-app/main/default/objects/Package_Header__c/fields/PKH_ACCSCOST__c.field-meta.xml
<CustomField>
    <fullName>PKH_ACCSCOST__c</fullName>
    <label>Accs Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>