force-app/main/default/objects/Package_Header__c/fields/PKH_ACCSGP__c.field-meta.xml
<CustomField>
    <fullName>PKH_ACCSGP__c</fullName>
    <label>Accs GP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>