force-app/main/default/objects/Package_Header__c/fields/PKH_ACCSPKGPRICE__c.field-meta.xml
<CustomField>
    <fullName>PKH_ACCSPKGPRICE__c</fullName>
    <label>Accs Package Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>