force-app/main/default/objects/Package_Header__c/fields/PKH_ADDNLPKGPRICE__c.field-meta.xml
<CustomField>
    <fullName>PKH_ADDNLPKGPRICE__c</fullName>
    <label>Additional Package Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>