force-app/main/default/objects/Package_Header__c/fields/PKH_BRM_BRCD__c.field-meta.xml
<CustomField>
    <fullName>PKH_BRM_BRCD__c</fullName>
    <label>Branch Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>