force-app/main/default/objects/Package_Header__c/fields/PKH_CREATEDBY__c.field-meta.xml
<CustomField>
    <fullName>PKH_CREATEDBY__c</fullName>
    <label>PKH_CREATEDBY</label>
    <length>20</length>
    <type>Text</type>
</CustomField>