force-app/main/default/objects/Package_Header__c/fields/PKH_LASTUPDDT__c.field-meta.xml
<CustomField>
    <fullName>PKH_LASTUPDDT__c</fullName>
    <label>PKH_LASTUPDDT</label>
    <type>DateTime</type>
</CustomField>