force-app/main/default/objects/Package_Header__c/fields/PKH_MODELCONVRATE__c.field-meta.xml
<CustomField>
    <fullName>PKH_MODELCONVRATE__c</fullName>
    <label>Model Coversion Code</label>
    <precision>16</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>