force-app/main/default/objects/Package_Header__c/fields/PKH_MODELCOST__c.field-meta.xml
<CustomField>
    <fullName>PKH_MODELCOST__c</fullName>
    <label>Model Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>