force-app/main/default/objects/Package_Header__c/fields/PKH_MODELGP__c.field-meta.xml
<CustomField>
    <fullName>PKH_MODELGP__c</fullName>
    <label>Model GP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>