force-app/main/default/objects/Package_Header__c/fields/PKH_MODELPKGPRICE__c.field-meta.xml
<CustomField>
    <fullName>PKH_MODELPKGPRICE__c</fullName>
    <label>Model Package Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>