force-app/main/default/objects/Package_Header__c/fields/PKH_MYM_MODELYEAR__c.field-meta.xml
<CustomField>
    <fullName>PKH_MYM_MODELYEAR__c</fullName>
    <label>Model Year</label>
    <type>Date</type>
</CustomField>