force-app/main/default/objects/Package_Header__c/fields/PKH_PKGNO__c.field-meta.xml
<CustomField>
    <fullName>PKH_PKGNO__c</fullName>
    <externalId>true</externalId>
    <label>Package No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>