force-app/main/default/objects/Package_Header__c/fields/PKH_STATUS__c.field-meta.xml
<CustomField>
    <fullName>PKH_STATUS__c</fullName>
    <label>Status</label>
    <length>1</length>
    <type>Text</type>
</CustomField>