force-app/main/default/objects/Package_Header__c/fields/PKH_VALIDFROM__c.field-meta.xml
<CustomField>
    <fullName>PKH_VALIDFROM__c</fullName>
    <label>Valid From</label>
    <type>Date</type>
</CustomField>