force-app/main/default/objects/Package_Header__c/fields/SA_PKH_PKGPRICE__c.field-meta.xml
<CustomField>
    <fullName>SA_PKH_PKGPRICE__c</fullName>
    <formula>IF(PKH_PKGPRICE__c &lt; 0, &quot;(&quot;, &quot;&quot;) &amp;
	IF(PKH_PKGPRICE__c &gt;= 1000000, TEXT(FLOOR(PKH_PKGPRICE__c / 1000000)) &amp; &quot;,&quot;, &quot;&quot;) &amp;
	IF(PKH_PKGPRICE__c &gt;= 1000, RIGHT(TEXT(FLOOR(PKH_PKGPRICE__c / 1000)), 3) &amp; &quot;,&quot;, &quot;&quot;) &amp;
	RIGHT(TEXT(FLOOR(PKH_PKGPRICE__c)), 3) &amp; &quot;.&quot; &amp;
	IF(PKH_PKGPRICE__c * 100 &lt; 10, &quot;0&quot; &amp; TEXT(ROUND(PKH_PKGPRICE__c, 2) * 100), TEXT(MIN(ROUND(PKH_PKGPRICE__c, 2) * 100, 99))) &amp;
	IF(PKH_PKGPRICE__c &lt; 0, &quot;)&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Package Price</label>
    <type>Text</type>
</CustomField>