force-app/main/default/objects/Package_Header__c/fields/VSMS_Compound_Primary_Key__c.field-meta.xml
<CustomField>
    <fullName>VSMS_Compound_Primary_Key__c</fullName>
    <externalId>true</externalId>
    <label>VSMS Compound Primary Key</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>